# nfse_nacional

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  __init__.py  builder.py  client.py  pyproject.toml  setup.py  signer.py  transmitter.py  utils.py  xml.py
docs/: instrucoes-testes-unitarios-xml-ia.md  integracao-projetos-consumidores.md
